# xsd-delphi-code-gen

./: .gitignore  Cargo.toml  README.md  build.rs
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: main.rs
codegen/: Cargo.toml  README.md
codegen/src/: lib.rs  types.rs
genphi_core/: Cargo.toml
genphi_core/src/: dependency_graph.rs  ir.rs  lib.rs  type_registry.rs
genphi_core/src/ir/: type_id_provider.rs  type_registry.rs  types.rs
openapi/: Cargo.toml
openapi/src/: endpoint_collector.rs  generator.rs  helper.rs  lib.rs  models.rs  parser.rs  render.rs  schema_collector.rs  tui.rs  type_registry.rs
openapi/src/parser/: types.rs
openapi/src/templates/: client.pas  client_interface.pas  macros.pas  models.pas
openapi/src/tui/: state.rs  ui.rs  worker.rs
openapi/src/tui/ui/: browser.rs
openapi/src/tui/ui/browser/: components.rs  endpoints.rs
openapi/src/tui/ui/browser/components/: header.rs  parameter.rs  request_body.rs  response.rs  schema.rs
src/: _main.rs  generator.rs  main.rs  parser.rs  parser_types.rs  type_registry.rs
src/generator/: code_generator_trait.rs  delphi_code_generator.rs  dependency_graph.rs  generator.rs  internal_representation.rs  mod.rs  types.rs
src/generator/delphi/: alias_code_gen.rs  class_code_gen.rs  code_generator.rs  code_writer.rs  const_code_gen.rs  enum_code_gen.rs  helper.rs  helper_code_gen.rs  mod.rs  optional_code_gen.rs  union_type_code_gen.rs
src/generator/internal_representation/: class_type.rs  helper.rs  union_type.rs
src/parser/: annotations.rs  complex_type.rs  custom_attribute.rs  helper.rs  mod.rs  parser.rs  simple_type.rs  types.rs  xml.rs
xml/: Cargo.toml
xml/src/: lib.rs  type_registry.rs
xml/src/generator/: code_generator_trait.rs  dependency_graph.rs  internal_representation.rs  mod.rs  types.rs
xml/src/generator/delphi/: alias_code_gen.rs  class_code_gen.rs  code_generator.rs  code_writer.rs  const_code_gen.rs  enum_code_gen.rs  helper.rs  helper_code_gen.rs  mod.rs  template_models.rs  union_type_code_gen.rs
xml/src/generator/delphi/templates/: macros.pas  models.pas
xml/src/generator/internal_representation/: class_type.rs  enumeration.rs  helper.rs  type_alias.rs  union_type.rs
xml/src/parser/: complex_type.rs  custom_attribute.rs  helper.rs  mod.rs  node.rs  simple_type.rs  types.rs  xml.rs
xml/tests/: planned_features_test.rs
