[package]
name = "xsd-delphi-code-gen"
version = "0.1.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.14", features = ["derive"] }
# crossterm = "0.27.0"
quick-xml = "0.30.0"
unicode-segmentation = "1.10.1"
# ratatui = { version = "0.22.0", features = ["all-widgets"] }
chrono = "0.4.26"

[dev-dependencies]
indoc = "2"
pretty_assertions = "1.4.0"

[profile.release]
lto = true
# opt-level = 's'