[package]
name = "xsd-delphi-code-gen"
version = "0.1.14"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.14", features = ["derive"] }
quick-xml = "0.31.0"
unicode-segmentation = "1.10.1"
chrono = "0.4.26"

[dev-dependencies]
indoc = "2"
pretty_assertions = "1.4.0"

[build-dependencies]
winres = "0.1"

[profile.release]
lto = true
# opt-level = 's'

[package.metadata.winres]
# OriginalFilename = "testing.exe"
# FileDescription = "⛄❤☕"
LegalCopyright = "Copyright © 2023"
