[workspace]

resolver = "2"

members = ["codegen", "cli", "openapi", "xml"]

# [package]
# name = "xsd-delphi-code-gen"
# version = "0.1.20"
# edition = "2021"
# build = "build.rs"

# # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]


# [build-dependencies]
# winres = "0.1"

# [profile.release]
# lto = true
# # opt-level = 's'

# [package.metadata.winres]
# # OriginalFilename = "testing.exe"
# # FileDescription = "⛄❤☕"
# LegalCopyright = "Copyright © 2023"
