[package]
name = "openapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
crossbeam-channel = "0.5.15"
indexmap = { version = "2.9.0", features = ["std", "serde"] }
lazy_static = "1.5.0"
ratatui = "0.29.0"
tui-scrollview = "0.5.1"
serde = "1.0.219"
serde_json = "1.0.140"

# Old dependencies
sw4rm-rs = "0.2.0"
tera = "1.20.0"
