[package]
name = "openapi"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codegen = { path = "../codegen" }
genphi_core = { path = "../genphi_core" }

anyhow = "1.0.98"
crossbeam-channel = "0.5.15"
indexmap = { version = "2.13.0", features = ["std", "serde"] }
lazy_static = "1.5.0"
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
reqwest = { version = "0.13", features = ["blocking"] }
tui-scrollview = "0.6.2"
serde = "1.0"
serde_json = "1.0"

# Old dependencies
sw4rm-rs = "0.2.0"
tera = "1.20.0"
