[package]
name = "xml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

quick-xml = "0.31.0"
unicode-segmentation = "1.11.0"
chrono = "0.4.38"
tera = "1.19.1"
serde = "1.0.198"
serde_with = {version = "3.7.0", features = ["macros"]}

[dev-dependencies]
indoc = "2"
pretty_assertions = "1.4.0"