[package]
name = "xml"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

genphi_core = { path = "../genphi_core" }
quick-xml = "0.39.0"
unicode-segmentation = "1.12.0"
chrono = "0.4.42"
tera = "1.20.1"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.16.1", features = ["macros"] }

[dev-dependencies]
indoc = "2"
pretty_assertions = "1.4.0"
